--- a/templates/core/vendafiado/criar.html
+++ b/templates/core/vendafiado/criar.html
@@ -1,40 +1,58 @@
 {% extends "base/index.html" %}
 {% load static bootstrap %}
-{% block conteudo %} 
+{% block conteudo %}
 
-    <div class="container mt-5">
-        <h2>Cadastrar Venda a Prazo</h2>
-        <form method="post">
-            {% csrf_token %}
-            {{form.media}}
-            {{ form|bootstrap }}
-            <h3 class="mt-2">Itens da Venda</h3>
-            <div id="formset-container">
-                {{ itens_form.management_form }}
-                {% for form in itens_form %}
-                    <div class="formset-form">
-                        {{ form|bootstrap }}
-                    </div>
-                {% endfor %}
-            </div>
-            <button type="button" id="add-product" class="btn btn-primary mt-1">Adicionar mais produtos</button>
-            <div class="d-grid gap-2 col-6 mx-auto mt-3 mb-2">
-                <button type="submit" class="btn btn-success rounded-pill">Finalizar Venda</button>
-            </div>
-        </form>
-    </div>
-    <script>
-        document.getElementById('add-product').onclick = function() {
-            console.log("Olá")
-            var formCount = document.querySelectorAll('.formset-form').length;  // Conta quantos formulários já existem
-            var formsetClone = document.querySelector('.formset-form').cloneNode(true);  // Clona o último formulário
-            formsetClone.querySelectorAll('input, select').forEach(function(input) {
-                input.name = input.name.replace(/\d+/, formCount);  // Atualiza o índice do formulário
-                input.id = input.id.replace(/\d+/, formCount);  // Atualiza o id dos inputs
-                input.value = '';  // Limpa os valores dos campos
-            });
-            document.querySelector('#formset-container').appendChild(formsetClone);  // Adiciona o formulário clonado ao container
-            document.getElementById('id_itens_form-TOTAL_FORMS').value = formCount + 1;  // Atualiza o número total de formulários
-        };
-    </script>
+<div class="container mt-5">
+    <h2>Cadastrar Venda a Prazo</h2>
+    <form method="post">
+        {% csrf_token %}
+        {{ form.media }}
+        {{ form|bootstrap }}
+        <h3 class="mt-2">Itens da Venda</h3>
+        <div id="formset-container">
+            {{ itens_form.management_form }}  <!-- Essencial para o formset -->
+            {% for form in itens_form %}
+                <div class="formset-form">
+                    {{ form|bootstrap }}
+                </div>
+            {% endfor %}
+        </div>
+        <button type="button" id="add-product" class="btn btn-primary mt-1">Adicionar mais produtos</button>
+        <div class="d-grid gap-2 col-6 mx-auto mt-3 mb-2">
+            <button type="submit" class="btn btn-success rounded-pill">Finalizar Venda</button>
+        </div>
+    </form>
+</div>
+<div id="formset-empty" style="display:none;">
+    {{ itens_form.empty_form|bootstrap }}
+</div>
+<script>    
+    $(document).ready(function() {
+        document.getElementById('add-product').addEventListener('click', function() {
+            var formIdx = $('#id_itemvendafiado_set-TOTAL_FORMS').val();
+            $('#formset-container').append($('#formset-empty').html().replace(/__prefix__/g, formIdx));
+            $('#id_itemvendafiado_set-TOTAL_FORMS').val(parseInt(formIdx) + 1);
+        });
+        $('#id_cliente').select2({
+            ajax: {
+                url: "{% url 'cliente_pesquisar' %}",
+                dataType: 'json',
+                delay: 250,
+                data: function (params) {
+                    return {
+                        term: params.term,
+                    };
+                },
+                processResults: function (data) {
+                    return {
+                        results: data.results
+                    };
+                },
+                cache: true
+            },
+            minimumInputLength: 1,
+        });
+    });
+</script>
+
 {% endblock conteudo %}
