--- a/templates/users/empresa/detalhes_empresa.html
+++ b/templates/users/empresa/detalhes_empresa.html
@@ -9,6 +9,8 @@
             <li class="list-group-item"><b>Razão Social: </b>{{empresa.razao_social}}</li>
             <li class="list-group-item"><b>CNPJ: </b>{{empresa.cnpj}}</li>
             <li class="list-group-item"><b>E-mail: </b>{{empresa.email}}</li>
+            <li class="list-group-item"><b>Resumo: </b>{{empresa.resumo_loja|safe}}</li>
+            <li class="list-group-item"><b>Telefone: </b>{{empresa.telefonedecontato|safe}}</li>
             <li class="list-group-item"><b>Descrição: </b>{{empresa.descricao|safe}}</li>
         </ul>
         <h2 class="mt-4">Colaboradores</h2>
