--- a/templates/core/produto/lista_produtos.html
+++ b/templates/core/produto/lista_produtos.html
@@ -3,6 +3,7 @@
 {% block conteudo %} 
 
     <div class="container mt-5">
+        <a href="{% url 'cadastrar_produto' %}" class="btn btn-success mb-5">Cadastrar Produto</a>
         <h2>Produtos</h2>
         <div class="row">
             <form method="get" class="form-inline mb-3 d-flex">
