--- a/templates/users/empresa/lista_empresas.html
+++ b/templates/users/empresa/lista_empresas.html
@@ -4,7 +4,9 @@
 
     <div class="container mt-5">
         <h2>Listagem de Empresas</h2>
-        <table class="table table-hover">
+        <a class="btn btn-success" href="{% url 'cadastrar_empresa' %}">Cadastrar Nova Empresa</a>
+        <a class="btn btn-primary" href="{% url 'cadastrar_usuario_admin' %}">Cadastrar Usuário</a>
+        <table class="table table-hover mt-3">
             <thead>
                 <tr>
                     <th>ID</th>
@@ -20,17 +22,15 @@
                     <td>{{ empresa.nome }}</td>
                     <td>{{ empresa.cnpj }}</td>
                     <td>
-                        <a href="{% url 'editar_empresa' empresa.pk %}" class="btn btn-outline-primary">Editar</a>
-                        <a href="{% url 'inativar_empresa' empresa.pk %}" class="btn btn-outline-danger">Inativar</a>
-                        <a href="{% url 'lista_usuarios' empresa.pk %}" class="btn btn-outline-success">Usuários</a>
-                        <a href="{% url 'detalhes_empresa' empresa.pk %}" class="btn btn-outline-info">Detalhes</a>                          
+                        <a href="{% url 'editar_empresa' empresa.pk %}" class="btn btn-primary">Editar</a>
+                        <a href="{% url 'inativar_empresa' empresa.pk %}" class="btn btn-danger">Inativar</a>
+                        <a href="{% url 'lista_usuarios' empresa.pk %}" class="btn btn-success">Usuários</a>
+                        <a href="{% url 'detalhes_empresa' empresa.pk %}" class="btn btn-info">Detalhes</a>                          
                     </td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
-        <a class="btn btn-outline-success" href="{% url 'cadastrar_empresa' %}">Cadastrar Nova Empresa</a>
-        <a class="btn btn-outline-primary" href="{% url 'cadastrar_usuario_admin' %}">Cadastrar Usuário</a>
     </div>
 
 {% endblock conteudo %}
