--- a/templates/users/users/lista_usuarios.html
+++ b/templates/users/users/lista_usuarios.html
@@ -3,6 +3,7 @@
 {% block conteudo %} 
 
     <div class="container mt-5">
+        <a href="{% url 'cadastrar_usuario' %}" class="btn btn-success mb-5">Cadastrar Colaborador</a>
         <h2>Colaboradores</h2>
         <table class="table table-hover">
             <thead>
